fixing appHeader layout issue with
Got to ad breakpoints!

--- a/src/App.css
+++ b/src/App.css
@@ -30,19 +30,17 @@ body {
 }
 
 .App .questionContext .appHeader {
-  width: 100vw;
   display: flex;
-  margin-top: 4rem;
-  justify-content: space-around;
+  margin: 4rem auto;
+  width: calc(900px - 10px);
 }
 
-
-.App .questionContext .appHeader h1{
+.App .appHeader h1{
+  flex-grow: 2;
   text-align: center;
   color: #fff;
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   margin-top: 2.5rem;
-  flex-grow: 2;
 }
 
 .App .questionContext .appHeader .step, .App .appHeader .score {
@@ -68,14 +66,6 @@ body {
   margin-top: 4rem;
   justify-content: space-around;
 }
-
-.App .startContainer .appHeader h1{
-  text-align: center;
-  color: #fff;
-  font-size: 1.4rem;
-  margin-top: 2.5rem;
-}
-
 
 .App .quizBody{
   display: flex;
@@ -170,18 +160,16 @@ body {
 .App .questionTextContainer{
   height: 120px;
   display: none;
-  animation: slide-in .4s ease-in;
+  animation: fade-in .4s ease-in;
 }
 
-@keyframes slide-in{
-  0% {opacity: 0; transform: translate3d(80%, 0, 0)}
-  100% {opacity: 1; transform: none}
+@keyframes fade-in{
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
-
-
 
 .App .questionContainer{
-  margin-top: 80px;
+  margin-top: 30px;
   text-align: center;
   font-size: 1.4rem;
 }
@@ -190,7 +178,7 @@ body {
   flex-grow:1;
   display: flex;
   flex-direction: column;
-  margin-top: 6vh;
+  margin-top: 3vh;
   padding: 0 1rem;
 }
 
@@ -275,4 +263,70 @@ body {
   width: 70%
 }
 
+/* TODO grid display for questions */
+.App .questionTextContainer .questionGrid{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr .5fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-auto-rows: 40px;
+  background-color: rgb(50, 114, 50);
+}
+
+.App .questionTextContainer .questionGrid div{
+  padding: .4rem;
+}
+
+.App .questionTextContainer .questionGrid .person{
+  grid-column-start: 1; 
+  grid-column-end: 2; 
+  grid-row-start: 1; 
+  grid-row-end: 2; 
+}
+
+.App .questionTextContainer .questionGrid .plus1{
+  grid-column-start: 2; 
+  grid-column-end: 3; 
+  grid-row-start: 2; 
+  grid-row-end: 3;
+}
+
+.App .questionTextContainer .questionGrid .tense{
+  grid-column-start: 3; 
+  grid-column-end: 4; 
+  grid-row-start: 1; 
+  grid-row-end: 2;
+}
+
+.App .questionTextContainer .questionGrid .plus2{
+  grid-column-start: 4; 
+  grid-column-end: 5; 
+  grid-row-start: 2; 
+  grid-row-end: 3;
+}
+
+.App .questionTextContainer .questionGrid .verbName{
+  grid-column-start: 5; 
+  grid-column-end: 6; 
+  grid-row-start: 1; 
+  grid-row-end: 2;
+}
+
+.App .questionTextContainer .questionGrid .propsPerson{
+  grid-column-start: 1; 
+  grid-column-end: 2; 
+  grid-row-start: 3; 
+  grid-row-end: 4; 
+}
+.App .questionTextContainer .questionGrid .propsTense{
+  grid-column-start: 3; 
+  grid-column-end: 4; 
+  grid-row-start: 3; 
+  grid-row-end: 4;
+}
+.App .questionTextContainer .questionGrid .propsVerbName{
+  grid-column-start: 5; 
+  grid-column-end: 6; 
+  grid-row-start: 3; 
+  grid-row-end: 4;
+}
 
